src/scss/base/style.scss
/* ... */
/* borders for hybrid words */
.expression__hybrid-word--hover-indicator {
  border-bottom-style: dotted;
}
.expression__hybrid-word--click-indicator {
  border-bottom-style: dashed;
}


/* sentence indicator: sentence should be tested */
.expression__hybrid-word--sentence-indicator {
  color: var(--accent);
  border-color: var(--accent);
}
/* word indicator: only the word should be tested */
.expression__hybrid-word--word-indicator {
  border-color: var(--text-color--3);
}


/* experimental vertical-display support, moves borders to left */
.card-wrapper--vertical-display {
  .expression__hybrid-word--hover-indicator {
    border-bottom-style: none;
    border-left-style: dotted;
  }
  .expression__hybrid-word--click-indicator {
    border-bottom-style: none;
    border-left-style: dashed;
  }
}


/* used to specify that hovering toggles between word/sentence */
.expression-box__hybrid-sentence {
  display: none;
}

//.expression__hybrid--hover:hover > .expression-box__hybrid-word {
//  display: none;
//}
//.expression__hybrid--hover:hover > .expression-box__hybrid-sentence {
//  display: grid;
//}
//.expression__hybrid--hover.expression__hybrid--hint:hover > .expression-box__hybrid-word {
//  /* hint cards retains word */
//  display: grid;
//}

/* hover behavior for non-hint cards */
.expression__hybrid--hover:not(.expression__hybrid--hint):hover {
  > .expression-box__hybrid-word {
    display: none;
  }
   > .expression-box__hybrid-sentence {
    display: grid;
  }
}

/* hover behavior for hint cards */
.expression__hybrid--hover.expression__hybrid--hint {
  /* reduces horizontal space */
  .expression-box__hybrid-word {
    display: inline-grid;
  }

  .expression-box__hybrid-word:hover + .expression-box__hybrid-sentence {
    display: grid;
  }

  // intentionally commented out for now (so hovering over the sentence will not preserve the sentence)
  //.expression-box__hybrid-sentence:hover {
  //  /* prevents sentence from disappearing on hover */
  //  display: grid;
  //}
}

.hybrid-click-toggle:checked + .expression__hybrid .expression-box__hybrid-word {
  display: none;
}
.hybrid-click-toggle:checked + .expression__hybrid .expression-box__hybrid-sentence {
  display: grid;
}
.hybrid-click-toggle:checked + .expression__hybrid.expression__hybrid--hint .expression-box__hybrid-word {
  /* hint cards retains word */
  display: inline-grid;
}

//.expression__hybrid {
//  border: 1px solid red;
//}
//.expression-box {
//  border: 1px solid green;
//}


/*
.expression__hybrid--hover:hover + .pa-indicator,
.hybrid-click-toggle:checked + .expression__hybrid + .pa-indicator,
.expression--sentence + .pa-indicator {
  font-size: var(--pa-indicator-sent-font-size);
}
*/

/* removes pa indicator only on sentence if class adde
 * (class is added if quotes are colored, or on sentence below cards)
 */
.expression__hybrid--hover.expression__hybrid--remove-pa-indicator:hover .expression-box__hybrid-sentence .pa-indicator > .pa-indicator__svg {
  display: none;
}

.hybrid-click-toggle:checked + .expression__hybrid.expression__hybrid--remove-pa-indicator .expression-box__hybrid-sentence  .pa-indicator > .pa-indicator__svg {
  display: none;
}

/* removes pa indicator entirely on sentences for hint cards */
.expression__hybrid--hint .expression-box__hybrid-sentence .pa-indicator > .pa-indicator__svg {
  display: none;
}



.sentence-quote {
}

/*
 * formats the open quote to be to the left of the entire text box
 */
.sentence-quote--open {
}

.sentence-quote--close {
}



.popup-menu {
  position: fixed;

  /* bless flex boxes */
  display: flex;
  align-items: center; /* Vertical center alignment */
  justify-content: center; /* Horizontal center alignment */
  flex-direction: column;
  row-gap: 3px;

  bottom: 30px;
  right: 30px;
}

.popup-menu--animate {
  display: flex;
  align-items: center; /* Vertical center alignment */
  justify-content: center; /* Horizontal center alignment */

  z-index: 1;

  min-width: 250px;
  min-height: 65px;
  text-align: center;

  border-radius: 4px;
  background-color: var(--tooltip-background-darken);

  animation-name: popup-menu-in, popup-menu-stay, popup-menu-fade;
  animation-delay: 0s, 0.6s, 3.6s;
  animation-duration: 0.6s, 3s, 0.75s;
  opacity: 0;
}



@keyframes popup-menu-in {
  from {
    transform: translateY(20px);
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes popup-menu-stay {
  from {
    opacity: 1;
  }
  to {
    opacity: 1;
  }
}


@keyframes popup-menu-fade {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}






/*
 *  ===============
 *   BACK SIDE CSS
 *  ===============
 */


/*
 * adds a width constraint to the backside to make things look better
 * - only applied after the main definition header
 */
.back-side-restrict-width {
  max-width: common.$bp-max-width-backside;
  margin: auto;
  padding: 0px;
}

.answer-border {
  border-bottom: 1px solid;
  margin-top: 10px;
  margin-bottom: 15px;
  width: 95%;
}



@include common.common;



/*
 * -------------------
 *  Definition header
 * -------------------
 */


/* contains the word, picture, and pitch accent */
/* no idea for a good name, so going to call it "def-header" == definition header */
.def-header {
  display: flex;
  font-size: 30px;
  justify-content: center;
  align-items: center;
  max-width: 820px;
  margin: auto;
  position: relative;
}

.dh-left { /* left */
  background: var(--background-darken);
  padding: 0.52em;
  border-radius: 5px;
  flex: 1; /* takes up all available space */
}

/* Adds padding to right/left to prevent word from overlapping indicators.
 * This is an extreme edge case. This shouldn't ever be visible
 * unless you have a duplicate of a very long word.
 */
.dh-left--with-similar-word-indicators {
  padding-left: 35px;
  padding-right: 35px;
}

/* PA cards only */
.dh-left--blue-border { /* left */
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 71, 83, 1);
  padding: 0.50em;
}
/* ... */

